# cortex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fix-path.ps1  pyproject.toml
cortex-core/: __init__.py  cli.py  server.py
cortex-core/agent/: curator.py
cortex-core/brain/: __init__.py  manager.py  schema.py  soul.py
cortex-core/curation/: __init__.py
cortex-core/mcp/: server.py
cortex-core/search/: searcher.py
cortex_core/: __init__.py  cli.py  server.py
cortex_core/agent/: __init__.py  curator.py
cortex_core/brain/: manager.py  soul.py
cortex_core/curation/: distiller.py
cortex_core/mcp/: __init__.py  server.py
cortex_core/search/: __init__.py  searcher.py
docs/: CLAUDE_DESKTOP_SETUP.md  SETUP.md  SPEC.md
examples/sample-brain/: always-on.md
examples/sample-brain/long-term/: projects.md
scripts/: fix-path.ps1
